fix(CICD): 환경변수명 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,7 +113,7 @@ services:
       CONTENT_BUCKET: ${CONTENT_BUCKET}
       PROFILE_BUCKET: ${PROFILE_BUCKET}
       LOGS_BUCKET: ${LOGS_BUCKET}
-      S3_REGION: ${S3_REGION}
+      AWS_REGION: ${AWS_REGION}
       TMDB_API_KEY: ${TMDB_API_KEY}
       TMDB_BASE_URL: ${TMDB_BASE_URL}
       SPORTSDB_API_KEY: ${SPORTSDB_API_KEY}
