feat(콘텐츠 데이터 관리): 썸네일을 S3에 물리적으로 업로드하는 로직을 구현합니다.
application.yml의 cloud.aws.s3.directory와 cloud.aws.s3.base-url이 추가되었습니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,6 +110,8 @@ cloud:
       profile-bucket: ${PROFILE_BUCKET}
       logs-bucket: ${LOGS_BUCKET}
       region: ${AWS_REGION}
+      directory: ${AWS_DIRECTORY}
+      base-url: ${AWS_BASE_URL}
 
 api:
   tmdb:
