fix(콘텐츠 데이터 관리): 콘텐츠 데이터 생성 오류 수정
ADMIN 계정으로 콘텐츠 데이터 등록을 할 때 제대로 등록이 되지 않는 부분을 수정합니다.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -59,3 +59,5 @@ cloud:
     s3:
       directory: ${AWS_DIRECTORY}
       base-url: ${AWS_BASE_URL}
+      access-key-id: ${AWS_ACCESS_KEY_ID}
+      secret-key-id: ${AWS_SECRET_KEY_ID}
