--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -59,5 +59,4 @@ cloud:
     s3:
       directory: ${AWS_DIRECTORY}
       base-url: ${AWS_BASE_URL}
-      access-key-id: ${AWS_ACCESS_KEY_ID}
-      secret-key-id: ${AWS_SECRET_KEY_ID}
+      content-bucket: ${CONTENT_BUCKET}
