--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -131,3 +131,5 @@ jobs:
           service: ${{ secrets.SERVICE_NAME }}
           cluster: ${{ secrets.CLUSTER_NAME }}
           wait-for-service-stability: true
+
+# test
