test(기타): README, BasicContentService, jacoco 커버리지 범위 수정 및 ddl-auto를 validate 설정

--- a/build.gradle
+++ b/build.gradle
@@ -113,9 +113,10 @@ jacocoTestReport {
             "**/entity/**",
             "**/dto/**",
             "**/exception/**",
-            "**/config/**",
             "**/error/**",
-            "**/repository/**"
+            "**/repository/**",
+            "**/security/**",
+            "**/global/**"
     ]
 
     afterEvaluate {
