refactor(CICD): 환경변수로 SMTP from address 받도록 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,7 @@ jobs:
             --arg SPRING_MAIL_PASSWORD "${{ secrets.SPRING_MAIL_PASSWORD }}" \
             --arg SPRING_MAIL_PORT "${{ secrets.SPRING_MAIL_PORT }}" \
             --arg SPRING_MAIL_USERNAME "${{ secrets.SPRING_MAIL_USERNAME }}" \
+            --arg SPRING_MAIL_FROM "${{ secrets.SPRING_MAIL_FROM }}" \
             --arg WEBSOCKET_ALLOWED_ORIGINS "${{ secrets.WEBSOCKET_ALLOWED_ORIGINS }}" \
             --arg SPORTSDB_API_KEY "${{ secrets.SPORTSDB_API_KEY }}" \
             --arg SPORTSDB_BASE_URL "${{ secrets.SPORTSDB_BASE_URL }}" \
@@ -104,6 +105,7 @@ jobs:
                 {"name": "SPRING_MAIL_PASSWORD", "value": $SPRING_MAIL_PASSWORD},
                 {"name": "SPRING_MAIL_PORT", "value": $SPRING_MAIL_PORT},
                 {"name": "SPRING_MAIL_USERNAME", "value": $SPRING_MAIL_USERNAME},
+                {"name": "SPRING_MAIL_FROM", "value": $SPRING_MAIL_FROM},
                 {"name": "WEBSOCKET_ALLOWED_ORIGINS", "value": $WEBSOCKET_ALLOWED_ORIGINS},
                 {"name": "SPORTSDB_API_KEY", "value": $SPORTSDB_API_KEY},
                 {"name": "SPORTSDB_BASE_URL", "value": $SPORTSDB_BASE_URL},
