--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,6 +62,7 @@ spring:
     port: 587                   # SMTP 서버 포트
     username: ${SPRING_MAIL_USERNAME}                # SMTP 서버 로그인 아이디
     password: ${SPRING_MAIL_PASSWORD}                # SMTP 서버 로그인 비밀번호
+    from: ${SPRING_MAIL_FROM:no-reply@gmail.com}
     properties:
       mail:
         smtp:
